# journal_app

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  journal_app.ui  main.cpp  test_data.db
.github/workflows/: build.yml
App/Inc/: IJournalStorage.hpp  JournalApp.hpp  JournalLocal.hpp  JournalRemote.hpp  SqliteConnect.hpp  SyncService.hpp  checkTableManager.hpp  config.h  dbManager.hpp  journal_app.h  main.hpp  mainTableManager.hpp  mainwindow.hpp  table_manage.hpp
App/Inc/Domain/: EventApp.hpp  EventModels.hpp  IEventStorage.hpp  IJournalStorage.hpp  IMonthSnapshotStore.hpp  JournalApp.hpp  JournalModels.hpp
App/Inc/Legacy/: mainTableManager.hpp
App/Inc/Storage/: EventSqliteStorage.hpp  JournalLocal.hpp  JournalRemote.hpp  RemoteConnectionOptions.hpp  SqliteConnect.hpp
App/Inc/Sync/: SyncService.hpp
App/Inc/Ui/: AttendanceCellWidget.hpp  CopyUsersDialog.hpp  DayMarkerDialog.hpp  EventDialog.hpp  EventDirectoryDialog.hpp  ExistingParticipantDialog.hpp  MonthDaysDialog.hpp  ParticipantDialog.hpp  ParticipantDirectoryDialog.hpp  ParticipantEmblemWidget.hpp  ParticipantPresentation.hpp  ParticipantStatisticsWidget.hpp  ParticipantStrikeHistoryDialog.hpp  UserProfileDialog.hpp  mainwindow.hpp
App/Src/: JournalApp.cpp  JournalLocal.cpp  JournalRemote.cpp  SqliteConnect.cpp  SyncService.cpp  checkTableManager.cpp  config.h  dbManager.cpp  main.cpp  mainTableManager.cpp  mainwindow.cpp  mainwindow.txt  table_manage.cpp
App/Src/Domain/: EventApp.cpp  EventModels.cpp  JournalApp.cpp  JournalModels.cpp
App/Src/Legacy/: dbManager.cpp  mainTableManager.cpp
App/Src/Storage/: EventSqliteStorage.cpp  JournalLocal.cpp  JournalRemote.cpp  RemoteConnectionOptions.cpp  SqliteConnect.cpp
App/Src/Sync/: SyncService.cpp
App/Src/Ui/: AttendanceCellWidget.cpp  CopyUsersDialog.cpp  DayMarkerDialog.cpp  EventDialog.cpp  EventDirectoryDialog.cpp  ExistingParticipantDialog.cpp  MonthDaysDialog.cpp  ParticipantDialog.cpp  ParticipantDirectoryDialog.cpp  ParticipantEmblemWidget.cpp  ParticipantStatisticsWidget.cpp  ParticipantStrikeHistoryDialog.cpp  UserProfileDialog.cpp  mainwindow.cpp
Test/: EventStorageTests.cpp  JournalStorageTests.cpp  LegacyImporterCliTests.cpp  SyncServiceTests.cpp  month_state_tests.cpp  ui_dialog_tests.cpp
Tools/: LegacyImportMain.cpp  convert_arme_attendance.py  convert_legacy_attendance.py  verify_arme_import.py
deploy/libsql/: compose.yaml
doc/: arch.md  arch.mmd  build_setup.md  code_detailed_walkthrough.md  data_storage_strategy.md  docker_setup.md  error_notes_log.md  legacy_xlsx_import.md  participant_profiles_plan.md  project_navigation.md  server_sync_plan.md  study_sessions_plan.md  uml_mermaid_diagrams.md
